# pregen-feedback-worker

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  Dockerfile  pyproject.toml  requirements.txt
assets/: prompt-template.txt
pregen/: main.py
pregen/entity/: feedback.py  word_error.py
pregen/infrastructure/: chat_gpt_client.py  whisper_client.py
pregen/pojo/data/: feedback_status.py
pregen/pojo/message/: slide_message.py
pregen/pojo/response/: transcription_response.py  word_error_response.py
pregen/repository/: feedback_repository.py  slide_repository.py  word_error_repository.py
pregen/service/: feedback_generator.py  script_generator.py
pregen/utils/: connection_factory.py  environment.py  logging.py
